Fixed alignment and CSS

--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ html, body
 {
     margin: 0px;
     height: 100%;
+    min-width: 700px;
 }
 
 header {
     min-width: 100%;
-    height: 20%;
+    height: 15%;
     background-image: url(assets/IMG_6969.jpg);
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -19,29 +20,41 @@ header {
     width: 30%;
     max-width: 150px;
     position: absolute;
-    top: 10%;
+    top: 5%;
     padding: 20px;
 }
 
 .link {
-    font-weight: 400;
     color: rgb(76, 76, 107);
 }
 
 .alignBox {
-    margin: 00px 80px 0px 80px;
+    align-content: center;
+    margin: 00px 10% 0px 10%;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
 }
 
 .textBox1 {
     padding: 20px;
     position: relative;
     text-align: center;
-    left: 20px;
 }
 
 .textBox2 {
     padding: 0px 80px;
     align-self: center;
+}
+
+.colBox {
+    display: flex;
+    position: relative;
+    left: -70px;
+}
+.rowBox {
+    display: flex;
+    flex-direction: column;
 }
 
 .subText {
@@ -50,28 +63,35 @@ header {
 
 .subField {
     padding: 10px 10px 10px 50px;
+    width: 450px;
 }
 
 .favIcon {
-    border-radius: 5%;
+    border-radius: 10%;
     max-width: 50px;
     max-height: 50px;
-    position: absolute;
-    left: 140px;
+    float: left;
+    margin-right: 20px;
 }
 
 .volWrapper .favIcon {
-    border-radius: 20%;
     max-width: 30px;
-    margin-top: 10px;
+    max-height: 30px;
+    margin-top: 5px;
+}
+
+.volWrapper .colBox {
+    left: -50px;
+    padding: 15px 0px;
 }
 
 h1 {
     font-size: x-large;
 }
 
-h2 {
+h2, .h2like {
     font-size: large;
+    font-weight: normal;
 }
 
 h3 {
